--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
-
+  google_sign_in: ^6.3.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -60,6 +60,10 @@ flutter:
     - assets/image/search.svg
     - assets/image/setting.svg
     - assets/image/red.svg
+    - assets/image/menuheart.svg
+    - assets/image/user.svg
+    - assets/image/home.svg
+    - assets/image/
 
   fonts:
     - family: Albert
