--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
+
     sdk: flutter
   flutter_svg: ^2.0.7
   google_sign_in: ^6.3.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
+  firebase_core: ^3.14.0
+  firebase_core_web: ^2.19.0
 
 dev_dependencies:
   flutter_test:
